<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/resultCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textAlignment="center"
                        android:textColor="#0f018a"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/resultEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:background="@null"
                        android:hint="@string/scanned_text"
                        android:importantForAutofill="no"
                        android:inputType=""
                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="#757575" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/previewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/image_preview"
                        android:textAlignment="center"
                        android:textColor="#0f018a"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <ImageView
                        android:id="@+id/imageIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/imageiv"
                        android:maxHeight="250dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_boundary_background"
                android:elevation="5dp"
                android:shadowColor="@color/black"
                android:shadowDy="@integer/material_motion_duration_short_2"
                android:text="@string/database_this_information"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>